# cs372

./: .gitignore  README.md
Project1/: Project1.sln  Project1.vcxproj
Test/: Source.cpp  Test.sln  Test.vcxproj
apps/Test/: Test.cpp
apps/apptemplate/: CMakeLists.txt  README.md
apps/hanoi/: CMakeLists.txt  hanoi.cpp  hanoiit.cpp
docs/: README.md
include/: README.md
include/Asignment3/: Asignment3.sln  Asignment3.vcxproj  Asignment3.vcxproj.filters  Header.h  Source.cpp  functionsForList.h  list.h
include/Assignment 3 part 3/: Assignment 3 part 3.sln  Assignment 3 part 3.vcxproj  Header.h
include/Assignment 6/: Assignment 6.sln  Assignment 6.vcxproj  Assignment 6.vcxproj.filters  Source.cpp
include/Assignment5 Q2/: Assignment5 Q2.sln  Assignment5 Q2.vcxproj  Assignment5 Q2.vcxproj.filters  Question2.h  Source.cpp
include/Assignment6 Kevin Bacon/: Project1.vcxproj  Project1.vcxproj.filters
include/BagWithReceipts/: Bag.h  BagWithReceipts.sln  BagWithReceipts.vcxproj  BagWithReceipts.vcxproj.filters  Header.h  Source.cpp
include/ConsoleApp1/: ConsoleApp1.sln  Program.cs
include/Josepheus/: Josepheus.sln  Josepheus.vcxproj  Josepheus.vcxproj.filters  KillerCircle.cpp  KillerCircle.h  Source.cpp
include/Killer Circle/: Header.h  Killer Circle.sln  Killer Circle.vcxproj
include/Project1/: Assignment 6 Kevin Bacon Bonus.sln  Project1.vcxproj  Source.cpp
include/SU 2023 cs372 question 1/: SU 2023 cs372 question 1.sln  SU 2023 cs372 question 1.vcxproj  Source.cpp
include/SU2023 cs372 test question 2/: SU2023 cs372 test question 2.sln  Source1.cpp  (+3 more)
(+29 files in other folders)
